# name: test_add[uvloop-None-False-empty-False]
  <class 'dict'> {
    'default': True,
    'id': '9pf',
    'sequences': <class 'list'> [
    ],
    'source_name': 'B',
    'source_type': 'isolate',
  }
---
# name: test_add[uvloop-None-False-empty-False].1
  <class 'dict'> {
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'imported': True,
    'isolates': <class 'list'> [
      <class 'dict'> {
        'default': True,
        'id': '9pf',
        'source_name': 'B',
        'source_type': 'isolate',
      },
    ],
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'schema': <class 'list'> [
    ],
    'verified': False,
    'version': 1,
  }
---
# name: test_add[uvloop-None-False-empty-False].2
  <class 'dict'> {
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Isolate B as default',
    'diff': <class 'list'> [
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          0,
          1,
        ],
      ],
      <class 'list'> [
        'add',
        'isolates',
        <class 'list'> [
          <class 'list'> [
            0,
            <class 'dict'> {
              'default': True,
              'id': '9pf',
              'sequences': <class 'list'> [
              ],
              'source_name': 'B',
              'source_type': 'isolate',
            },
          ],
        ],
      ],
    ],
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'add_isolate',
    'otu': <class 'dict'> {
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    },
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_add[uvloop-None-False-empty-True]
  <class 'dict'> {
    'default': True,
    'id': '9pf',
    'sequences': <class 'list'> [
    ],
    'source_name': 'B',
    'source_type': 'isolate',
  }
---
# name: test_add[uvloop-None-False-empty-True].1
  <class 'dict'> {
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'imported': True,
    'isolates': <class 'list'> [
      <class 'dict'> {
        'default': True,
        'id': '9pf',
        'source_name': 'B',
        'source_type': 'isolate',
      },
    ],
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'schema': <class 'list'> [
    ],
    'verified': False,
    'version': 1,
  }
---
# name: test_add[uvloop-None-False-empty-True].2
  <class 'dict'> {
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Isolate B as default',
    'diff': <class 'list'> [
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          0,
          1,
        ],
      ],
      <class 'list'> [
        'add',
        'isolates',
        <class 'list'> [
          <class 'list'> [
            0,
            <class 'dict'> {
              'default': True,
              'id': '9pf',
              'sequences': <class 'list'> [
              ],
              'source_name': 'B',
              'source_type': 'isolate',
            },
          ],
        ],
      ],
    ],
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'add_isolate',
    'otu': <class 'dict'> {
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    },
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_add[uvloop-None-False-not_empty-False]
  <class 'dict'> {
    'default': False,
    'id': '9pf',
    'sequences': <class 'list'> [
    ],
    'source_name': 'B',
    'source_type': 'isolate',
  }
---
# name: test_add[uvloop-None-False-not_empty-False].1
  <class 'dict'> {
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'imported': True,
    'isolates': <class 'list'> [
      <class 'dict'> {
        'default': False,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      },
      <class 'dict'> {
        'default': False,
        'id': '9pf',
        'source_name': 'B',
        'source_type': 'isolate',
      },
    ],
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'schema': <class 'list'> [
    ],
    'verified': False,
    'version': 1,
  }
---
# name: test_add[uvloop-None-False-not_empty-False].2
  <class 'dict'> {
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Isolate B',
    'diff': <class 'list'> [
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          0,
          1,
        ],
      ],
      <class 'list'> [
        'add',
        'isolates',
        <class 'list'> [
          <class 'list'> [
            1,
            <class 'dict'> {
              'default': False,
              'id': '9pf',
              'sequences': <class 'list'> [
              ],
              'source_name': 'B',
              'source_type': 'isolate',
            },
          ],
        ],
      ],
    ],
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'add_isolate',
    'otu': <class 'dict'> {
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    },
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_add[uvloop-None-False-not_empty-True]
  <class 'dict'> {
    'default': True,
    'id': '9pf',
    'sequences': <class 'list'> [
    ],
    'source_name': 'B',
    'source_type': 'isolate',
  }
---
# name: test_add[uvloop-None-False-not_empty-True].1
  <class 'dict'> {
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'imported': True,
    'isolates': <class 'list'> [
      <class 'dict'> {
        'default': False,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      },
      <class 'dict'> {
        'default': True,
        'id': '9pf',
        'source_name': 'B',
        'source_type': 'isolate',
      },
    ],
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'schema': <class 'list'> [
    ],
    'verified': False,
    'version': 1,
  }
---
# name: test_add[uvloop-None-False-not_empty-True].2
  <class 'dict'> {
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Isolate B as default',
    'diff': <class 'list'> [
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          0,
          1,
        ],
      ],
      <class 'list'> [
        'add',
        'isolates',
        <class 'list'> [
          <class 'list'> [
            1,
            <class 'dict'> {
              'default': True,
              'id': '9pf',
              'sequences': <class 'list'> [
              ],
              'source_name': 'B',
              'source_type': 'isolate',
            },
          ],
        ],
      ],
    ],
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'add_isolate',
    'otu': <class 'dict'> {
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    },
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_add[uvloop-None-True-empty-False]
  <class 'dict'> {
    'default': True,
    'id': '9pf',
    'sequences': <class 'list'> [
    ],
    'source_name': 'B',
    'source_type': 'isolate',
  }
---
# name: test_add[uvloop-None-True-empty-False].1
  <class 'dict'> {
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'imported': True,
    'isolates': <class 'list'> [
      <class 'dict'> {
        'default': True,
        'id': '9pf',
        'source_name': 'B',
        'source_type': 'isolate',
      },
    ],
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'schema': <class 'list'> [
    ],
    'verified': False,
    'version': 1,
  }
---
# name: test_add[uvloop-None-True-empty-False].2
  <class 'dict'> {
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Isolate B as default',
    'diff': <class 'list'> [
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          0,
          1,
        ],
      ],
      <class 'list'> [
        'add',
        'isolates',
        <class 'list'> [
          <class 'list'> [
            0,
            <class 'dict'> {
              'default': True,
              'id': '9pf',
              'sequences': <class 'list'> [
              ],
              'source_name': 'B',
              'source_type': 'isolate',
            },
          ],
        ],
      ],
    ],
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'add_isolate',
    'otu': <class 'dict'> {
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    },
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_add[uvloop-None-True-empty-True]
  <class 'dict'> {
    'default': True,
    'id': '9pf',
    'sequences': <class 'list'> [
    ],
    'source_name': 'B',
    'source_type': 'isolate',
  }
---
# name: test_add[uvloop-None-True-empty-True].1
  <class 'dict'> {
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'imported': True,
    'isolates': <class 'list'> [
      <class 'dict'> {
        'default': True,
        'id': '9pf',
        'source_name': 'B',
        'source_type': 'isolate',
      },
    ],
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'schema': <class 'list'> [
    ],
    'verified': False,
    'version': 1,
  }
---
# name: test_add[uvloop-None-True-empty-True].2
  <class 'dict'> {
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Isolate B as default',
    'diff': <class 'list'> [
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          0,
          1,
        ],
      ],
      <class 'list'> [
        'add',
        'isolates',
        <class 'list'> [
          <class 'list'> [
            0,
            <class 'dict'> {
              'default': True,
              'id': '9pf',
              'sequences': <class 'list'> [
              ],
              'source_name': 'B',
              'source_type': 'isolate',
            },
          ],
        ],
      ],
    ],
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'add_isolate',
    'otu': <class 'dict'> {
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    },
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_add[uvloop-None-True-not_empty-False]
  <class 'dict'> {
    'default': False,
    'id': '9pf',
    'sequences': <class 'list'> [
    ],
    'source_name': 'B',
    'source_type': 'isolate',
  }
---
# name: test_add[uvloop-None-True-not_empty-False].1
  <class 'dict'> {
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'imported': True,
    'isolates': <class 'list'> [
      <class 'dict'> {
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      },
      <class 'dict'> {
        'default': False,
        'id': '9pf',
        'source_name': 'B',
        'source_type': 'isolate',
      },
    ],
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'schema': <class 'list'> [
    ],
    'verified': False,
    'version': 1,
  }
---
# name: test_add[uvloop-None-True-not_empty-False].2
  <class 'dict'> {
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Isolate B',
    'diff': <class 'list'> [
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          0,
          1,
        ],
      ],
      <class 'list'> [
        'add',
        'isolates',
        <class 'list'> [
          <class 'list'> [
            1,
            <class 'dict'> {
              'default': False,
              'id': '9pf',
              'sequences': <class 'list'> [
              ],
              'source_name': 'B',
              'source_type': 'isolate',
            },
          ],
        ],
      ],
    ],
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'add_isolate',
    'otu': <class 'dict'> {
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    },
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_add[uvloop-None-True-not_empty-True]
  <class 'dict'> {
    'default': True,
    'id': '9pf',
    'sequences': <class 'list'> [
    ],
    'source_name': 'B',
    'source_type': 'isolate',
  }
---
# name: test_add[uvloop-None-True-not_empty-True].1
  <class 'dict'> {
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'imported': True,
    'isolates': <class 'list'> [
      <class 'dict'> {
        'default': False,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      },
      <class 'dict'> {
        'default': True,
        'id': '9pf',
        'source_name': 'B',
        'source_type': 'isolate',
      },
    ],
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'schema': <class 'list'> [
    ],
    'verified': False,
    'version': 1,
  }
---
# name: test_add[uvloop-None-True-not_empty-True].2
  <class 'dict'> {
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Isolate B as default',
    'diff': <class 'list'> [
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          0,
          1,
        ],
      ],
      <class 'list'> [
        'change',
        <class 'list'> [
          'isolates',
          0,
          'default',
        ],
        <class 'list'> [
          True,
          False,
        ],
      ],
      <class 'list'> [
        'add',
        'isolates',
        <class 'list'> [
          <class 'list'> [
            1,
            <class 'dict'> {
              'default': True,
              'id': '9pf',
              'sequences': <class 'list'> [
              ],
              'source_name': 'B',
              'source_type': 'isolate',
            },
          ],
        ],
      ],
    ],
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'add_isolate',
    'otu': <class 'dict'> {
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    },
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_add[uvloop-isolate-False-empty-False]
  <class 'dict'> {
    'default': True,
    'id': 'isolate',
    'sequences': <class 'list'> [
    ],
    'source_name': 'B',
    'source_type': 'isolate',
  }
---
# name: test_add[uvloop-isolate-False-empty-False].1
  <class 'dict'> {
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'imported': True,
    'isolates': <class 'list'> [
      <class 'dict'> {
        'default': True,
        'id': 'isolate',
        'source_name': 'B',
        'source_type': 'isolate',
      },
    ],
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'schema': <class 'list'> [
    ],
    'verified': False,
    'version': 1,
  }
---
# name: test_add[uvloop-isolate-False-empty-False].2
  <class 'dict'> {
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Isolate B as default',
    'diff': <class 'list'> [
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          0,
          1,
        ],
      ],
      <class 'list'> [
        'add',
        'isolates',
        <class 'list'> [
          <class 'list'> [
            0,
            <class 'dict'> {
              'default': True,
              'id': 'isolate',
              'sequences': <class 'list'> [
              ],
              'source_name': 'B',
              'source_type': 'isolate',
            },
          ],
        ],
      ],
    ],
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'add_isolate',
    'otu': <class 'dict'> {
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    },
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_add[uvloop-isolate-False-empty-True]
  <class 'dict'> {
    'default': True,
    'id': 'isolate',
    'sequences': <class 'list'> [
    ],
    'source_name': 'B',
    'source_type': 'isolate',
  }
---
# name: test_add[uvloop-isolate-False-empty-True].1
  <class 'dict'> {
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'imported': True,
    'isolates': <class 'list'> [
      <class 'dict'> {
        'default': True,
        'id': 'isolate',
        'source_name': 'B',
        'source_type': 'isolate',
      },
    ],
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'schema': <class 'list'> [
    ],
    'verified': False,
    'version': 1,
  }
---
# name: test_add[uvloop-isolate-False-empty-True].2
  <class 'dict'> {
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Isolate B as default',
    'diff': <class 'list'> [
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          0,
          1,
        ],
      ],
      <class 'list'> [
        'add',
        'isolates',
        <class 'list'> [
          <class 'list'> [
            0,
            <class 'dict'> {
              'default': True,
              'id': 'isolate',
              'sequences': <class 'list'> [
              ],
              'source_name': 'B',
              'source_type': 'isolate',
            },
          ],
        ],
      ],
    ],
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'add_isolate',
    'otu': <class 'dict'> {
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    },
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_add[uvloop-isolate-False-not_empty-False]
  <class 'dict'> {
    'default': False,
    'id': 'isolate',
    'sequences': <class 'list'> [
    ],
    'source_name': 'B',
    'source_type': 'isolate',
  }
---
# name: test_add[uvloop-isolate-False-not_empty-False].1
  <class 'dict'> {
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'imported': True,
    'isolates': <class 'list'> [
      <class 'dict'> {
        'default': False,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      },
      <class 'dict'> {
        'default': False,
        'id': 'isolate',
        'source_name': 'B',
        'source_type': 'isolate',
      },
    ],
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'schema': <class 'list'> [
    ],
    'verified': False,
    'version': 1,
  }
---
# name: test_add[uvloop-isolate-False-not_empty-False].2
  <class 'dict'> {
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Isolate B',
    'diff': <class 'list'> [
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          0,
          1,
        ],
      ],
      <class 'list'> [
        'add',
        'isolates',
        <class 'list'> [
          <class 'list'> [
            1,
            <class 'dict'> {
              'default': False,
              'id': 'isolate',
              'sequences': <class 'list'> [
              ],
              'source_name': 'B',
              'source_type': 'isolate',
            },
          ],
        ],
      ],
    ],
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'add_isolate',
    'otu': <class 'dict'> {
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    },
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_add[uvloop-isolate-False-not_empty-True]
  <class 'dict'> {
    'default': True,
    'id': 'isolate',
    'sequences': <class 'list'> [
    ],
    'source_name': 'B',
    'source_type': 'isolate',
  }
---
# name: test_add[uvloop-isolate-False-not_empty-True].1
  <class 'dict'> {
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'imported': True,
    'isolates': <class 'list'> [
      <class 'dict'> {
        'default': False,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      },
      <class 'dict'> {
        'default': True,
        'id': 'isolate',
        'source_name': 'B',
        'source_type': 'isolate',
      },
    ],
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'schema': <class 'list'> [
    ],
    'verified': False,
    'version': 1,
  }
---
# name: test_add[uvloop-isolate-False-not_empty-True].2
  <class 'dict'> {
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Isolate B as default',
    'diff': <class 'list'> [
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          0,
          1,
        ],
      ],
      <class 'list'> [
        'add',
        'isolates',
        <class 'list'> [
          <class 'list'> [
            1,
            <class 'dict'> {
              'default': True,
              'id': 'isolate',
              'sequences': <class 'list'> [
              ],
              'source_name': 'B',
              'source_type': 'isolate',
            },
          ],
        ],
      ],
    ],
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'add_isolate',
    'otu': <class 'dict'> {
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    },
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_add[uvloop-isolate-True-empty-False]
  <class 'dict'> {
    'default': True,
    'id': 'isolate',
    'sequences': <class 'list'> [
    ],
    'source_name': 'B',
    'source_type': 'isolate',
  }
---
# name: test_add[uvloop-isolate-True-empty-False].1
  <class 'dict'> {
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'imported': True,
    'isolates': <class 'list'> [
      <class 'dict'> {
        'default': True,
        'id': 'isolate',
        'source_name': 'B',
        'source_type': 'isolate',
      },
    ],
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'schema': <class 'list'> [
    ],
    'verified': False,
    'version': 1,
  }
---
# name: test_add[uvloop-isolate-True-empty-False].2
  <class 'dict'> {
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Isolate B as default',
    'diff': <class 'list'> [
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          0,
          1,
        ],
      ],
      <class 'list'> [
        'add',
        'isolates',
        <class 'list'> [
          <class 'list'> [
            0,
            <class 'dict'> {
              'default': True,
              'id': 'isolate',
              'sequences': <class 'list'> [
              ],
              'source_name': 'B',
              'source_type': 'isolate',
            },
          ],
        ],
      ],
    ],
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'add_isolate',
    'otu': <class 'dict'> {
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    },
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_add[uvloop-isolate-True-empty-True]
  <class 'dict'> {
    'default': True,
    'id': 'isolate',
    'sequences': <class 'list'> [
    ],
    'source_name': 'B',
    'source_type': 'isolate',
  }
---
# name: test_add[uvloop-isolate-True-empty-True].1
  <class 'dict'> {
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'imported': True,
    'isolates': <class 'list'> [
      <class 'dict'> {
        'default': True,
        'id': 'isolate',
        'source_name': 'B',
        'source_type': 'isolate',
      },
    ],
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'schema': <class 'list'> [
    ],
    'verified': False,
    'version': 1,
  }
---
# name: test_add[uvloop-isolate-True-empty-True].2
  <class 'dict'> {
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Isolate B as default',
    'diff': <class 'list'> [
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          0,
          1,
        ],
      ],
      <class 'list'> [
        'add',
        'isolates',
        <class 'list'> [
          <class 'list'> [
            0,
            <class 'dict'> {
              'default': True,
              'id': 'isolate',
              'sequences': <class 'list'> [
              ],
              'source_name': 'B',
              'source_type': 'isolate',
            },
          ],
        ],
      ],
    ],
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'add_isolate',
    'otu': <class 'dict'> {
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    },
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_add[uvloop-isolate-True-not_empty-False]
  <class 'dict'> {
    'default': False,
    'id': 'isolate',
    'sequences': <class 'list'> [
    ],
    'source_name': 'B',
    'source_type': 'isolate',
  }
---
# name: test_add[uvloop-isolate-True-not_empty-False].1
  <class 'dict'> {
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'imported': True,
    'isolates': <class 'list'> [
      <class 'dict'> {
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      },
      <class 'dict'> {
        'default': False,
        'id': 'isolate',
        'source_name': 'B',
        'source_type': 'isolate',
      },
    ],
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'schema': <class 'list'> [
    ],
    'verified': False,
    'version': 1,
  }
---
# name: test_add[uvloop-isolate-True-not_empty-False].2
  <class 'dict'> {
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Isolate B',
    'diff': <class 'list'> [
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          0,
          1,
        ],
      ],
      <class 'list'> [
        'add',
        'isolates',
        <class 'list'> [
          <class 'list'> [
            1,
            <class 'dict'> {
              'default': False,
              'id': 'isolate',
              'sequences': <class 'list'> [
              ],
              'source_name': 'B',
              'source_type': 'isolate',
            },
          ],
        ],
      ],
    ],
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'add_isolate',
    'otu': <class 'dict'> {
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    },
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_add[uvloop-isolate-True-not_empty-True]
  <class 'dict'> {
    'default': True,
    'id': 'isolate',
    'sequences': <class 'list'> [
    ],
    'source_name': 'B',
    'source_type': 'isolate',
  }
---
# name: test_add[uvloop-isolate-True-not_empty-True].1
  <class 'dict'> {
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'imported': True,
    'isolates': <class 'list'> [
      <class 'dict'> {
        'default': False,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      },
      <class 'dict'> {
        'default': True,
        'id': 'isolate',
        'source_name': 'B',
        'source_type': 'isolate',
      },
    ],
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'schema': <class 'list'> [
    ],
    'verified': False,
    'version': 1,
  }
---
# name: test_add[uvloop-isolate-True-not_empty-True].2
  <class 'dict'> {
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Isolate B as default',
    'diff': <class 'list'> [
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          0,
          1,
        ],
      ],
      <class 'list'> [
        'change',
        <class 'list'> [
          'isolates',
          0,
          'default',
        ],
        <class 'list'> [
          True,
          False,
        ],
      ],
      <class 'list'> [
        'add',
        'isolates',
        <class 'list'> [
          <class 'list'> [
            1,
            <class 'dict'> {
              'default': True,
              'id': 'isolate',
              'sequences': <class 'list'> [
              ],
              'source_name': 'B',
              'source_type': 'isolate',
            },
          ],
        ],
      ],
    ],
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'add_isolate',
    'otu': <class 'dict'> {
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    },
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_edit[uvloop]
  <class 'dict'> {
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'imported': True,
    'isolates': <class 'list'> [
      <class 'dict'> {
        'default': True,
        'id': 'cab8b360',
        'source_name': '0',
        'source_type': 'strain',
      },
    ],
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'schema': <class 'list'> [
    ],
    'verified': False,
    'version': 1,
  }
---
# name: test_edit[uvloop].1
  <class 'dict'> {
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Renamed Isolate 8816-v2 to Strain 0',
    'diff': <class 'list'> [
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          0,
          1,
        ],
      ],
      <class 'list'> [
        'change',
        <class 'list'> [
          'isolates',
          0,
          'source_name',
        ],
        <class 'list'> [
          '8816-v2',
          '0',
        ],
      ],
      <class 'list'> [
        'change',
        <class 'list'> [
          'isolates',
          0,
          'source_type',
        ],
        <class 'list'> [
          'isolate',
          'strain',
        ],
      ],
    ],
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'edit_isolate',
    'otu': <class 'dict'> {
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    },
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_remove[uvloop-bar]
  <class 'dict'> {
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'imported': True,
    'isolates': <class 'list'> [
      <class 'dict'> {
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      },
    ],
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'schema': <class 'list'> [
    ],
    'verified': True,
    'version': 1,
  }
---
# name: test_remove[uvloop-bar].1
  <class 'dict'> {
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Removed Isolate A',
    'diff': <class 'list'> [
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          0,
          1,
        ],
      ],
      <class 'list'> [
        'remove',
        'isolates',
        <class 'list'> [
          <class 'list'> [
            1,
            <class 'dict'> {
              'default': False,
              'id': 'bar',
              'sequences': <class 'list'> [
              ],
              'source_name': 'A',
              'source_type': 'isolate',
            },
          ],
        ],
      ],
      <class 'list'> [
        'change',
        'verified',
        <class 'list'> [
          False,
          True,
        ],
      ],
    ],
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'remove_isolate',
    'otu': <class 'dict'> {
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    },
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_remove[uvloop-bar].2
  <class 'list'> [
    <class 'dict'> {
      '_id': 'KX269872',
      'definition': 'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
      'host': 'sweet cherry',
      'isolate_id': 'cab8b360',
      'otu_id': '6116cba1',
      'segment': None,
      'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
    },
  ]
---
# name: test_remove[uvloop-cab8b360]
  <class 'dict'> {
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'imported': True,
    'isolates': <class 'list'> [
      <class 'dict'> {
        'default': True,
        'id': 'bar',
        'source_name': 'A',
        'source_type': 'isolate',
      },
    ],
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'schema': <class 'list'> [
    ],
    'verified': False,
    'version': 1,
  }
---
# name: test_remove[uvloop-cab8b360].1
  <class 'dict'> {
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Removed Isolate 8816-v2 and set Isolate A as default',
    'diff': <class 'list'> [
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          0,
          1,
        ],
      ],
      <class 'list'> [
        'change',
        <class 'list'> [
          'isolates',
          0,
          'id',
        ],
        <class 'list'> [
          'cab8b360',
          'bar',
        ],
      ],
      <class 'list'> [
        'change',
        <class 'list'> [
          'isolates',
          0,
          'source_name',
        ],
        <class 'list'> [
          '8816-v2',
          'A',
        ],
      ],
      <class 'list'> [
        'remove',
        <class 'list'> [
          'isolates',
          0,
          'sequences',
        ],
        <class 'list'> [
          <class 'list'> [
            0,
            <class 'dict'> {
              '_id': 'KX269872',
              'definition': 'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
              'host': 'sweet cherry',
              'isolate_id': 'cab8b360',
              'otu_id': '6116cba1',
              'segment': None,
              'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
            },
          ],
        ],
      ],
      <class 'list'> [
        'remove',
        'isolates',
        <class 'list'> [
          <class 'list'> [
            1,
            <class 'dict'> {
              'default': False,
              'id': 'bar',
              'sequences': <class 'list'> [
              ],
              'source_name': 'A',
              'source_type': 'isolate',
            },
          ],
        ],
      ],
    ],
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'remove_isolate',
    'otu': <class 'dict'> {
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    },
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_remove[uvloop-cab8b360].2
  <class 'list'> [
  ]
---
# name: test_set_default[uvloop]
  <class 'dict'> {
    'default': True,
    'id': 'bar',
    'sequences': <class 'list'> [
    ],
    'source_name': 'A',
    'source_type': 'isolate',
  }
---
# name: test_set_default[uvloop].1
  <class 'dict'> {
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'imported': True,
    'isolates': <class 'list'> [
      <class 'dict'> {
        'default': False,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      },
      <class 'dict'> {
        'default': True,
        'id': 'bar',
        'source_name': 'A',
        'source_type': 'isolate',
      },
    ],
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'schema': <class 'list'> [
    ],
    'verified': False,
    'version': 1,
  }
---
# name: test_set_default[uvloop].2
  <class 'dict'> {
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Set Isolate A as default',
    'diff': <class 'list'> [
      <class 'list'> [
        'change',
        'version',
        <class 'list'> [
          0,
          1,
        ],
      ],
      <class 'list'> [
        'change',
        <class 'list'> [
          'isolates',
          0,
          'default',
        ],
        <class 'list'> [
          True,
          False,
        ],
      ],
      <class 'list'> [
        'change',
        <class 'list'> [
          'isolates',
          1,
          'default',
        ],
        <class 'list'> [
          False,
          True,
        ],
      ],
    ],
    'index': <class 'dict'> {
      'id': 'unbuilt',
      'version': 'unbuilt',
    },
    'method_name': 'set_as_default',
    'otu': <class 'dict'> {
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    },
    'reference': <class 'dict'> {
      'id': 'hxn167',
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
